--- a/package.json
+++ b/package.json
@@ -27,9 +27,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.1",
+    "@angular-devkit/core": "^15.1.1",
+    "@angular-eslint/builder": "^15.2.0",
+    "@angular-eslint/eslint-plugin": "^15.2.0",
+    "@angular-eslint/eslint-plugin-template": "^15.2.0",
+    "@angular-eslint/schematics": "^15.2.0",
+    "@angular-eslint/template-parser": "^15.2.0",
     "@angular/cli": "~15.1.1",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
