--- a/angular.json
+++ b/angular.json
@@ -11,9 +11,6 @@
           "changeDetection": "OnPush"
         }
       },
-      "@schematics/angular:application": {
-        "strict": true
-      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -34,7 +31,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "styles/global.scss"
             ],
             "scripts": []
           },
