KAM-26: [FE] Create post card component Added `reauest-wrapper` and `loader` components. Added `post` component. Changed styles. Added post mocked data for `home` page. Added `mocked error requests` for another pages.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
       "@interceptors/*": ["src/app/interceptors/*"],
       "@pipes/*": ["src/app/pipes/*"],
       "@utils/*": ["src/app/utils/*"],
-      "@components/*": ["src/app/components/*"]
+      "@components/*": ["src/app/components/*"],
+      "@customTypes/*": ["src/app/types/*"]
     }
   },
   "angularCompilerOptions": {
