KAM-47: [FE] Reactive input Added `app-reactive-input` component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,12 +34,22 @@
       "@components/*": ["src/app/components/*"],
       "@widgets/*": ["src/app/widgets/*"],
       "@customTypes/*": ["src/app/types/*"]
-    }
+    },
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "noPropertyAccessFromIndexSignature": false,
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "extendedDiagnostics": {
+      "checks": {
+        "optionalChainNotNullable": "suppress"
+      }
+    }
   }
 }
