--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,8 @@
       "@utils/*": ["src/app/utils/*"],
       "@components/*": ["src/app/components/*"],
       "@widgets/*": ["src/app/widgets/*"],
+      "@validators/*": ["src/app/validators/*"],
+      "@services/*": ["src/app/services/*"],
       "@customTypes/*": ["src/app/types/*"]
     },
     "resolveJsonModule": true,
