--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "15.1.0",
     "@angular/platform-browser-dynamic": "15.1.0",
     "@angular/router": "15.1.0",
-    "bootstrap": "5.2.3",
+    "date-fns": "2.29.3",
     "moment": "2.29.4",
     "ng-zorro-antd": "15.1.0",
     "rxjs": "7.8.0",
