--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "2.29.3",
     "moment": "2.29.4",
     "ng-zorro-antd": "15.1.0",
+    "ngx-quill": "21.0.0",
     "rxjs": "7.8.0",
     "tslib": "2.3.0",
     "zone.js": "0.12.0"
