KAM-82: [FE] Button `Add post` Fixed issue with `build` script

--- a/angular.json
+++ b/angular.json
@@ -37,9 +37,9 @@
             ],
             "styles": [
               "styles/theme.less",
-              "./node_modules/quill/dist/quill.core.css",
-              "./node_modules/quill/dist/quill.bubble.css",
-              "./node_modules/quill/dist/quill.snow.css",
+              "node_modules/quill/dist/quill.core.css",
+              "node_modules/quill/dist/quill.bubble.css",
+              "node_modules/quill/dist/quill.snow.css",
               "src/styles.scss",
               "styles/global.scss"
             ]
