--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "2.29.4",
     "ng-zorro-antd": "15.1.0",
     "ngx-quill": "21.0.0",
+    "quill": "1.3.6",
     "rxjs": "7.8.0",
     "tslib": "2.3.0",
     "zone.js": "0.12.0"
@@ -42,6 +43,7 @@
     "@angular/compiler-cli": "15.1.0",
     "@types/jasmine": "4.3.0",
     "@types/node": "18.11.18",
+    "@types/quill": "2.0.10",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
     "eslint": "8.31.0",
