--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "15.1.0",
     "@angular/platform-browser-dynamic": "15.1.0",
     "@angular/router": "15.1.0",
+    "ag-grid-angular": "29.3.4",
+    "ag-grid-community": "29.3.4",
     "date-fns": "2.29.3",
     "ng-zorro-antd": "15.1.0",
     "ngx-quill": "21.0.0",
