KAM-86: [FE] Widget grid Refactored some code

--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,7 @@
             ],
             "styles": [
               "styles/theme.less",
+              "./node_modules/flag-icons/css/flag-icons.min.css",
               "./node_modules/quill/dist/quill.core.css",
               "./node_modules/quill/dist/quill.bubble.css",
               "./node_modules/quill/dist/quill.snow.css",
