--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "15.1.0",
     "@angular/platform-browser-dynamic": "15.1.0",
     "@angular/router": "15.1.0",
+    "@ngx-translate/core": "15.0.0",
+    "@ngx-translate/http-loader": "7.0.0",
     "ag-grid-angular": "29.3.4",
     "ag-grid-community": "29.3.4",
     "date-fns": "2.29.3",
-    "lodash-es": "4.17.21",
     "flag-icons": "6.6.6",
+    "lodash-es": "4.17.21",
     "ng-zorro-antd": "15.1.0",
     "ngx-quill": "21.0.0",
     "quill": "1.3.6",
