--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "7.0.0",
     "ag-grid-angular": "29.3.4",
     "ag-grid-community": "29.3.4",
+    "apexcharts": "3.43.0",
     "date-fns": "2.29.3",
     "flag-icons": "6.6.6",
     "lodash-es": "4.17.21",
