--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "2.29.3",
     "flag-icons": "6.6.6",
     "lodash-es": "4.17.21",
+    "ng-apexcharts": "1.8.0",
     "ng-zorro-antd": "15.1.0",
     "ngx-quill": "21.0.0",
     "quill": "1.3.6",
